--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.15.6",
     "axios": "^0.21.1",
     "http-proxy-middleware": "^2.0.0",
+    "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
