--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "cloudscraper": "^4.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "express": "^4.17.1",
     "prettier": "^2.3.0"
   }
 }
